Put the report start and end date into the label for bank account balances. Made money fields a bit shorter. Fix spacing on save button bar

--- a/src/AppBundle/Resources/assets/scss/components/_forms.scss
+++ b/src/AppBundle/Resources/assets/scss/components/_forms.scss
@@ -211,7 +211,7 @@ form {
 
 .form-control.form-control__number {
     width: 75%;
-    max-width: 280px;
+    max-width: 230px;
 }
 
 .form-label {
